# PRGII

./: .gitignore  CMakeLists.txt  README.md
2023-08-15/: CMakeLists.txt  main.c
2023-08-22/: CMakeLists.txt  alocacao_de_memoria  alocacao_de_memoria.c  main.c  recursividade.md
2023-08-22/exercicios/: CMakeLists.txt  fat_it.c  fat_rec.c  funcoes.h  main.c  sequencia_fib_rec.c  sequencia_fibonacci.c
2023-08-28/: CMakeLists.txt  main.c
2023-08-29/: CMakeLists.txt  funcoes.c  funcoes.h  main  main.c
app_fila/: CMakeLists.txt  main.c
app_pilha/: CMakeLists.txt  main.c
appord/: CMakeLists.txt  main.c
appprg/: CMakeLists.txt  main.c
lista-01/: CMakeLists.txt  conta_vogal.c  conta_vogal.h  jogo_de_azar.c  jogo_de_azar.h  main.c  maior_numero.c  maior_numero.h  matriz.c  matriz.h  palindromo.c  palindromo.h  pares_e_impares.c  pares_e_impares.h  sorteio.c  sorteio.h  vetor.c  vetor.h
